# my_toolbox_4.0

.github/workflows/: build-assembly.yml  build-cpp.yml  build-csharp.yml  build-go.yml  build-python.yml  build-rust.yml  build-zig.yml
assembly/_template/: main.asm
cpp/_template/: main.cpp
csharp/_template/: Template.csproj
csharp/_template/src/: Program.cs
go/_template/: go.mod  main.go
python/_template/: main.py
rust/_template/: Cargo.toml
rust/_template/.cargo/: config.toml
rust/_template/src/: main.rs
rust/portable_run/: Cargo.toml
rust/portable_run/src/: main.rs
zig/_template/: build.zig
zig/_template/src/: main.zig
zig/portable_run/: build.zig
zig/portable_run/src/: main.zig
zig/portable_run_GPT/: build.zig
zig/portable_run_GPT/src/: main.zig
