[package]
name = "rust-tool"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Tối ưu hóa kích thước file (có thể đổi thành "3" nếu muốn ưu tiên tốc độ)
lto = true          # Link-time optimization (Ép file nhỏ và chạy nhanh hơn)
codegen-units = 1   # Biên dịch đơn luồng để tối ưu LTO tốt nhất
panic = "abort"     # Xóa overhead của stack unwinding khi lỗi
strip = true        # Xóa toàn bộ debug symbols
